# dfm

./: README.md  pyproject.toml  requirements.txt
dfm/: __init__.py  dfm.py
docs/: conf.py  index.rst
manpages/: dfm.1
tests/: test_dfm.py
